force-app/main/default/objects/SYS_OAuthConfig__c/SYS_OAuthConfig__c.object-meta.xml
<CustomObject>
    <label>SYS_OAuthConfig</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYS_OAuthConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>