force-app/main/default/objects/SYS_OAuthConfig__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SYS_OAuthConfigs</relationshipLabel>
    <relationshipName>SYS_OAuthConfigs</relationshipName>
    <type>Lookup</type>
</CustomField>