force-app/main/default/objects/SYS_OAuthConfig__c/fields/Additional_URL_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Additional_URL_Parameters__c</fullName>
    <label>Additional URL Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>