force-app/main/default/objects/SYS_OAuthConfig__c/fields/Algo__c.field-meta.xml
<CustomField>
    <fullName>Algo__c</fullName>
    <label>Algo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HS256</fullName>
            </value>
            <value>
                <fullName>RS256</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>