force-app/main/default/objects/SYS_OAuthConfig__c/fields/aud__c.field-meta.xml
<CustomField>
    <fullName>aud__c</fullName>
    <label>Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>