force-app/main/default/objects/SYS_OAuthConfig__c/fields/Authorize_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Endpoint__c</fullName>
    <label>Authorize Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>