force-app/main/default/objects/SYS_OAuthConfig__c/fields/Authorize_link__c.field-meta.xml
<CustomField>
    <fullName>Authorize_link__c</fullName>
    <formula>&quot;https://drchrono.com/o/authorize?response_type=code&amp;redirect_uri=&quot; &amp; Redirect_URL__c   &amp; &quot;&amp;client_id=&quot; &amp; Name &amp; &quot;&amp;state=&quot; &amp; State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorize link</label>
    <type>Text</type>
</CustomField>