force-app/main/default/objects/SYS_OAuthConfig__c/fields/Config_ID__c.field-meta.xml
<CustomField>
    <fullName>Config_ID__c</fullName>
    <externalId>true</externalId>
    <label>Config ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>