force-app/main/default/objects/SYS_OAuthConfig__c/fields/exp__c.field-meta.xml
<CustomField>
    <fullName>exp__c</fullName>
    <formula>iat__c + 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>JWT Token Expiration time</inlineHelpText>
    <label>Expiration Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>