force-app/main/default/objects/SYS_OAuthConfig__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>authorization_code</fullName>
                <label>Authorization Code</label>
            </value>
            <value>
                <fullName>client_credentials</fullName>
                <label>Client Credentials</label>
            </value>
            <value>
                <fullName>device_code</fullName>
                <label>Device Code</label>
            </value>
            <value>
                <fullName>refresh_token</fullName>
                <label>Refresh Token</label>
            </value>
            <value>
                <fullName>password</fullName>
                <label>Password</label>
            </value>
            <value>
                <fullName>pkce</fullName>
                <label>PKCE</label>
            </value>
            <value>
                <fullName>jwt</fullName>
                <label>JWT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>