force-app/main/default/objects/SYS_OAuthConfig__c/fields/iat__c.field-meta.xml
<CustomField>
    <fullName>iat__c</fullName>
    <formula>((NOW() - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 86400 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issued at</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>