force-app/main/default/objects/SYS_OAuthConfig__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Type</valueSetName>
    </valueSet>
</CustomField>