force-app/main/default/objects/SYS_OAuthConfig__c/fields/iss__c.field-meta.xml
<CustomField>
    <fullName>iss__c</fullName>
    <label>Issuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>