force-app/main/default/objects/SYS_OAuthConfig__c/fields/Last_Processed_SYSLog__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_SYSLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Processed SYSLog</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>SYS_OAuthConfigs</relationshipLabel>
    <relationshipName>SYS_OAuthConfigs</relationshipName>
    <type>Lookup</type>
</CustomField>