force-app/main/default/objects/SYS_OAuthConfig__c/fields/Object_Setting__c.field-meta.xml
<CustomField>
    <fullName>Object_Setting__c</fullName>
    <inlineHelpText>DeveloperName of the Object Setting to be used for this record to be processed</inlineHelpText>
    <label>Object Setting</label>
    <length>200</length>
    <type>Text</type>
</CustomField>