force-app/main/default/objects/SYS_OAuthConfig__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <inlineHelpText>Private Key for signing JWT token</inlineHelpText>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>