force-app/main/default/objects/SYS_OAuthConfig__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>