force-app/main/default/objects/SYS_OAuthConfig__c/fields/Schedule_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Refresh_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Refresh Token</label>
    <type>Checkbox</type>
</CustomField>