force-app/main/default/objects/SYS_OAuthConfig__c/fields/Start_token_flow_on_save__c.field-meta.xml
<CustomField>
    <fullName>Start_token_flow_on_save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start token flow on save</label>
    <type>Checkbox</type>
</CustomField>