force-app/main/default/objects/SYS_OAuthConfig__c/fields/sub__c.field-meta.xml
<CustomField>
    <fullName>sub__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>