force-app/main/default/objects/SYS_OAuthConfig__c/fields/target_audience__c.field-meta.xml
<CustomField>
    <fullName>target_audience__c</fullName>
    <label>Target Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>