force-app/main/default/objects/SYS_OAuthConfig__c/fields/Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula__c</fullName>
    <formula>TEXT((CreatedDate - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 86400)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula</label>
    <type>Text</type>
</CustomField>