force-app/main/default/objects/SYS_OAuthConfig__c/fields/Test_Mode__c.field-meta.xml
<CustomField>
    <fullName>Test_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Mode</label>
    <type>Checkbox</type>
</CustomField>