force-app/main/default/objects/SYS_OAuthConfig__c/fields/Token_Expiry_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry_Time__c</fullName>
    <label>Token Expiry Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>