force-app/main/default/objects/SYS_OAuthConfig__c/fields/Token_Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Token_Last_Refresh_Date__c</fullName>
    <label>Token Last Refresh Date</label>
    <type>DateTime</type>
</CustomField>