force-app/main/default/objects/SYS_OAuthConfig__c/fields/Token_type__c.field-meta.xml
<CustomField>
    <fullName>Token_type__c</fullName>
    <label>Token type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bearer</fullName>
                <default>true</default>
                <label>Bearer</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>